💡 Added dynamic age logic, updated skills & projects section

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -69,20 +69,35 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
-              </ul>
-            </div>
+  <h3>Project Information</h3>
+  <ul>
+    <li><strong>Category</strong>: AI Web App</li>
+    <li><strong>Client</strong>: Personal / Academic</li>
+    <li><strong>Project date</strong>: July 2025</li>
+    <li><strong>Project URL</strong>: 
+      <a href="https://symptom-classifier.onrender.com" target="_blank">Live Site</a>
+    </li>
+    <li><strong>GitHub</strong>: 
+      <a href="https://github.com/HardPatel2005/symptom_classifier_project" target="_blank">View Code</a>
+    </li>
+  </ul>
+</div>
+
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
-              <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
-            </div>
+  <h2>AI Symptom Classifier (Django + LangGraph + Gemini API)</h2>
+  <p>
+    A web-based symptom classifier using Django, LangGraph, and Gemini API for intelligent symptom analysis. It guides users on whether symptoms indicate emergency, mental health, or general issues.
+  </p>
+  <ul>
+    <li><strong>Features:</strong></li>
+    <li>🤖 AI-powered classification (Emergency / Mental / General)</li>
+    <li>🔁 LangGraph-based dynamic conversational flow</li>
+    <li>📚 Category-specific guidance with disclaimer</li>
+    <li>🧾 AI summary and full log storage</li>
+    <li>📱 Responsive Tailwind UI</li>
+  </ul>
+</div>
+
           </div>
 
         </div>
